# Trivia

./: .env.docker.example  .env.example  .gitignore  DESIGN.md  IMPLEMENTATION.md  README.md  SPEC.md  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  manage.py  pyproject.toml
backend/apps/accounts/: models.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/authoring/: apps.py  llm.py  ops.py  sample.py  tests.py  urls.py  views.py
backend/apps/judging/: apps.py  fuzzy.py  llm.py  tests.py
backend/apps/quizzes/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/quizzes/migrations/: 0001_initial.py  0002_quiz_category_status.py  0003_mark_legacy_drafts.py
backend/apps/sessions/: admin.py  apps.py  consumers.py  models.py  realtime.py  routing.py  serializers.py  tests.py  urls.py  views.py
backend/apps/sessions/migrations/: 0001_initial.py  0002_session_invite_code.py
backend/prompts/: authoring_system.txt  judge_system.txt
backend/trivia/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
caddy/: Caddyfile
cloudflared/: config.example.yml
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/ui/: Button.tsx  Field.tsx
frontend/src/features/play/: AnswerWidgetPreview.tsx  MathText.tsx  PromptBlocksRenderer.tsx  QuizHome.tsx  RoundIntroSlate.tsx
frontend/src/features/quiz-editor/: QuizEditor.tsx
