[project]
name = "trivia-backend"
version = "0.1.0"
description = "Self-hosted multiplayer trivia backend"
requires-python = ">=3.12,<3.14"
dependencies = [
  "anthropic>=0.49.0",
  "channels>=4.2.0",
  "channels-redis>=4.2.0",
  "daphne>=4.1.0",
  "django>=5.2.0,<6.0.0",
  "django-allauth>=65.0.0",
  "django-cors-headers>=4.5.0",
  "djangorestframework>=3.15.0",
  "openai>=2.38.0",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1",
  "python-levenshtein>=0.25.0",
  "redis>=5.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-django>=4.9.0",
  "ruff>=0.8.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "trivia.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.ruff]
line-length = 100
target-version = "py312"
